--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "express-prom-bundle": "^8.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "node-cache": "^5.1.2",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "pm2": "^6.0.8",
