--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
@@ -20,6 +19,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "pg": "^8.16.3",
     "pm2": "^6.0.8",
