--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
-    "pg": "^8.16.3",
     "pm2": "^6.0.8",
     "redis": "^5.6.0",
+    "sqlite3": "^5.1.7",
     "winston": "^3.17.0",
     "ws": "^8.18.3"
   },
